Update Swagger to use Railway production URL
