# docs/swagger.json
@@ -1,6 +1,6 @@
 {
     "schemes": [
-        "http"
+        "https"
     ],
     "swagger": "2.0",
     "info": {
@@ -18,7 +18,7 @@
         },
         "version": "1.0"
     },
-    "host": "localhost:8080",
+    "host": "cv-search-production.up.railway.app",
     "basePath": "/api",
     "paths": {
         "/search/hybrid": {
